tests/ui/codegen/evm-ir/validation/direct_edge_stack_underflow.evmir
//~? ERROR: EVM IR verification failed: block 1: `pop` on an empty stack
@module module

bb0:
  jump bb1
bb1:
  pop
  stop
